[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Brian Celenza <bcelenza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.2"
lazy_static = "1.4.0"
openssl = "0.10.30"
rand = "0.8.0"
time = "0.2.23"